feature: update user nick_id
