# protobuf/gen/monify.swagger.json
@@ -484,6 +484,37 @@
         ]
       }
     },
+    "/v1/user/nick_id": {
+      "put": {
+        "operationId": "UserService_UpdateNickId",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/UEmpty"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/UpdateNickIdRequest"
+            }
+          }
+        ],
+        "tags": [
+          "UserService"
+        ],
+        "security": [
+          {
+            "Bearer": []
+          }
+        ]
+      }
+    },
     "/v1/groups_bill": {
       "get": {
         "operationId": "GroupsBillService_GetGroupBills",
@@ -883,6 +914,9 @@
         },
         "avatarUrl": {
           "type": "string"
+        },
+        "nickId": {
+          "type": "string"
         }
       }
     },
@@ -1083,6 +1117,14 @@
     },
     "UEmpty": {
       "type": "object"
+    },
+    "UpdateNickIdRequest": {
+      "type": "object",
+      "properties": {
+        "nickId": {
+          "type": "string"
+        }
+      }
     },
     "UpdateUserAvatarRequest": {
       "type": "object",
